--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Work Sans', sans-serif;
+    margin: 5px;
 }
 .factory{
     color: green;
@@ -11,13 +12,33 @@ h1{
 h2{
     text-align: center;
 }
+a{
+    text-decoration: none;
+    color: white;
+}
 .paragraph{
     text-align: center;
 }
-.half-width{
+.flex{
     display: flex;
+}
+.sec1{
+    height: 80vh;
+    
+}
+.sec2{
+    height: 80vh;
+    background-image: url(Frame\ 58.jpg);
+}
+.half-width{
+    width: 50%;
     margin:5px;
 
+}
+.half-width  image{
+    width: 200%;
+    height: 100%;
+    padding: 0 0 0 50px;
 }
 #back-ground{
     background-image: url(Frame\ 58.png);
@@ -40,38 +61,36 @@ h2{
 
 }
 .menu-div{
-    margin: 10px;
+    margin: 5px;
     border-radius: 20px;
-    background-color: lightgreen;
+
 }
 .menu-img{
     width: 100%;
-    height: 60vh;
     border-radius: 5%;
-    padding: 10px;
+    padding: 5px;
     
 }
 .image-size{
     width:80%;
 }
 .experience-item{
-    width: 33.30%;
-    height: 30%;
-    margin-left: 5%;
+    width:30%;
+    margin-left: 5px;
     margin-right: 5%;
-    padding-left: 20px;
+    padding-left: 5px;
     border-radius: 10px;
     box-shadow: 10px 10px 40px  gray;
     border-left:10px;
 }
 .special-align{
-    width: 90%;
-    height: 50%;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-left: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 40px  gray;
-    border-left:10px;
+    width: 100%;
+    height:%;
+    margin-left:%;
+    margin-bottom:5%;
+    margin-right:5%;
+    padding-right: 5px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 20px;
 
 }
